<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollIndicators="none"
            android:padding="16dp">

                <EditText
                    android:id="@+id/bookNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/book_name"
                    android:background="@drawable/input_border_background"
                    android:padding="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/authorNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author_name"
                    android:background="@drawable/input_border_background"
                    android:padding="@dimen/dimen_12"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/genreSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_border_background"
                    android:padding="@dimen/dimen_12"
                    android:spinnerMode="dropdown"
                    android:layout_marginTop="@dimen/dimen_16" />

                <RadioGroup
                    android:id="@+id/fictionRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16" >
                    <RadioButton android:id="@+id/fictionRadioButton"
                        android:text="@string/fiction"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                    <RadioButton android:id="@+id/nonFictionRadioButton"
                        android:text="@string/non_fiction"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content" />
                </RadioGroup>

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16" />

                <CheckBox
                    android:id="@+id/ageGroupCheckBoxKids"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kids"
                    android:layout_marginTop="@dimen/dimen_16" />

                <CheckBox
                    android:id="@+id/ageGroupCheckBoxTeens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teens"
                    android:layout_marginTop="@dimen/dimen_8" />

                <CheckBox
                    android:id="@+id/ageGroupCheckBoxAdults"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adults"
                    android:layout_marginTop="@dimen/dimen_8" />

                <CheckBox
                    android:id="@+id/ageGroupCheckBoxAllAges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_ages"
                    android:layout_marginTop="@dimen/dimen_8" />

                <Button
                    android:id="@+id/addBookButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14"
                    android:text="@string/add_book"
                    android:layout_marginTop="@dimen/dimen_16" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
