<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BookDetail">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_60">

                <TextView
                    android:id="@+id/textViewBookNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name_label"
                    android:fontFamily="sans-serif-black"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:id="@+id/textViewBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_18" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
                <TextView
                    android:id="@+id/textViewAuthorNameLabel"
                    android:text="@string/author_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:id="@+id/textViewAuthorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_18"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
                <TextView
                    android:id="@+id/textViewGenreLabel"
                    android:text="@string/genre_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="@dimen/text_18" />
                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_18"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
                <TextView
                    android:id="@+id/textViewFictionLabel"
                    android:text="@string/is_fiction_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="@dimen/text_18" />
                <TextView
                    android:id="@+id/textViewFiction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_18"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
                <TextView
                    android:id="@+id/textViewLaunchDateLabel"
                    android:text="@string/launch_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="@dimen/text_18" />
                <TextView
                    android:id="@+id/textViewLaunchDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_18"  />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
                <TextView
                    android:id="@+id/textViewAgeGroupLabel"
                    android:text="@string/age_group_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="@dimen/text_18" />
                <TextView
                    android:id="@+id/textViewAgeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_18"  />
        </LinearLayout>
</LinearLayout>